# search_engine

./: CMakeLists.txt  README.md  config - Copy.json  config.json  config_lin.json  requests.json
database/: file001.txt  file002.txt  file003.txt  file004.txt
include/: converterjson.h  entry.h  invertedindex.h  relativeindex.h  searchserver.h  userinterface.h
src/: CMakeLists.txt  converterjson.cpp  invertedindex.cpp  main.cpp  searchserver.cpp  tests.cpp  userinterface.cpp
tests/: CMakeLists.txt  invertedindextests.cpp  searchservertests.cpp  tests.cpp
